--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Web Site de uma coluna</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2? family = Fonte + Código + Pro: wght @ 500 & display = swap " rel=" stylesheet ">
     <script src="https://kit.fontawesome.com/eefac6c057.js" crossorigin="anonymous"></script>
 
